# superlend-liquidation-bot-indexer

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  compose.yml  info.md
base_rpc_client/: Cargo.toml
base_rpc_client/src/: block_watcher.rs  lib.rs
borrowers_indexer/: Cargo.toml  Dockerfile  README.Docker.md
borrowers_indexer/src/: config.rs  constant.rs  indexer_borrowers.rs  main.rs  thread_pool.rs
database_manager/: Cargo.toml
database_manager/src/: bootstrap.rs  health_factor_utils.rs  lib.rs
database_manager/src/handler/: last_index_block_handler.rs  mod.rs  user_debt_collateral_table_handler.rs  user_table_handler.rs
health_factor_service/: Cargo.toml  Dockerfile
health_factor_service/src/: main.rs
health_factor_service/src/index_users/: mod.rs  user_helper.rs
indexer/: Cargo.toml
indexer/src/: lib.rs  main.rs
indexer/src/blockchain_manager/: mod.rs  multicall.rs
indexer/src/config/: env_helper.rs  local_config.rs  mod.rs
indexer/src/users_helper/: mod.rs  models.rs
indexer/src/users_indexer/: mod.rs
indexer/src/users_updater_service/: mod.rs
indexer/src/utils/: constants.rs  contracts.rs  logger.rs  math_helper.rs  mod.rs
indexer_database/: Cargo.toml
indexer_database/migration/: Cargo.toml
indexer_database/migration/src/: lib.rs  m20220101_000001_create_user_tables.rs  m20220101_000002_create_user_debt_collateral.rs  m20220101_000003_create_last_block_indexed.rs
indexer_database/src/: last_index_block_helper.rs  lib.rs  user_debt_collateral_helper.rs  users_tables_helper.rs
indexer_database/src/entities/: at_risk_accounts.rs  healthy_accounts.rs  last_index_block.rs  liquidatable_accounts.rs  mod.rs  prelude.rs  user_debt_collateral.rs
local_database/local.db/dbs/default/: data  data-shm  data-wal  stats.json  wallog
local_database/local.db/metastore/: data-shm
user_helper/: Cargo.toml
user_helper/src/: constant.rs  lib.rs  user_helper.rs
