[workspace]
members = [
    "base_rpc_client",
    "borrowers_indexer",
    "database_manager",
    "health_factor_service",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"

# [package]
# name = "liquidator"
# version = "0.1.0"
# edition = "2021"

# [dependencies]
# tokio = { version = "1.39.3", features = ["full"] }
# ethers = { version = "2.0.14", features = ["rustls", "openssl", "legacy"] }
# dotenv = "0.15.0"
# anyhow = "1.0.86"
# serde_json = "1.0.127"
# serde = { version = "1.0.209", features = ["derive"] }
# tracing = "0.1.40"
# tracing-subscriber = "0.3.18"
# futures = "0.3.30"
# reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
# hex = "0.4.3"
