
[workspace]
members = ["indexer", "indexer_database"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
#Local
indexer_database = { path = "indexer_database" }

# Runtime
tokio = { version = "1.43.0", features = ["full"] }

# Error handling
anyhow = "1.0.95"


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-appender = "0.2"

# Environment
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

# Futures
futures = "0.3.31"

# Async trait
# async-trait = "0.1.85"
chrono = "0.4.39"

# EVM
alloy = { version = "0.11.1", features = ["full"] }

# Database
sea-orm = { version = "1.1.4", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }

axum = "0.6"
