[package]
name = "base_rpc_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
tracing = "0.1.40"
futures = "0.3.30"
async-stream = "0.3.5"

[dev-dependencies]
tokio = { version = "1.39.3", features = ["full"] }
tracing-subscriber = "0.3.18"

