[package]
name = "base_rpc_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.40"
futures = "0.3.30"
async-stream = "0.3.6"

[dev-dependencies]
tokio = { version = "1.39.3", features = ["full"] }
tracing-subscriber = "0.3.18"

