[package]
name = "health_factor_service"
version = "0.1.0"
edition = "2021"

[dependencies]
base_rpc_client = { path = "../base_rpc_client" }
database_manager = { path = "../database_manager" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
tokio = { version = "1.39.3", features = ["full"] }
serde_json = "1.0.127"
ethers-types-rs = "0.1.0"
chrono = "0.4.38"
futures = "0.3.30"
hex = "0.4.3"
