[package]
name = "indexer"
version.workspace = true
edition.workspace = true

[dependencies]
# Local
indexer_database.workspace = true

# Runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Environment
dotenvy.workspace = true

# Database
sea-orm.workspace = true

# Futures
futures.workspace = true

# EVM
alloy.workspace = true

# Time
chrono.workspace = true

axum.workspace = true